--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
+        "laravelcollective/html": "^6.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
