--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "tailwindcss": "^3.1.0",
         "vite": "^3.1.8",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "chart.js": "^3.9.1"
     }
 }
