--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
         "laravelcollective/html": "^6.3",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpword": "^1.0",
+        "psr/simple-cache": "2.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
