--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
         "@popperjs/core": "^2.10.2",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
-        "@vitejs/plugin-vue": "^3.2.0",
+        "@vitejs/plugin-react": "^2.0.0",
         "autoprefixer": "^10.4.7",
         "axios": "^0.27",
         "bootstrap": "^5.2.1",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "sass": "^1.32.11",
         "tailwindcss": "^3.1.0",
-        "vite": "^3.1.8",
-        "vue": "^3.2.31"
+        "vite": "^3.1.8"
     },
     "dependencies": {
         "@kurkle/color": "^0.2.1",
